--- a/mf-receiver/package.json
+++ b/mf-receiver/package.json
@@ -21,11 +21,11 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
-    "component-lib": "file:../mf-component-library/dist/component-lib",
     "rxjs": "~7.5.0",
     "single-spa": ">=4.0.0",
     "single-spa-angular": "^6.0.1",
     "tslib": "^2.3.0",
+    "ui-lib": "file:../ui-library/dist/ui-lib",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
