adding navigation functionality to mf-nav

--- a/mf-nav/angular.json
+++ b/mf-nav/angular.json
@@ -15,7 +15,7 @@
       },
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "prefix": "mf-nav",
       "architect": {
         "build": {
           "builder": "@angular-builders/custom-webpack:browser",
