--- a/mf-nav/package.json
+++ b/mf-nav/package.json
@@ -24,6 +24,7 @@
     "single-spa": ">=4.0.0",
     "single-spa-angular": "^6.0.1",
     "tslib": "^2.3.0",
+    "ui-lib": "file:../ui-library/dist/ui-lib",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
