--- a/mf-nav/package.json
+++ b/mf-nav/package.json
@@ -25,6 +25,7 @@
     "single-spa-angular": "^6.0.1",
     "tslib": "^2.3.0",
     "ui-lib": "file:../ui-library/dist/ui-lib",
+    "webpack-merge": "^5.8.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
